# Piston

./: .gitignore  CMakeLists.txt  README.md  README.rst  dependencies.txt  help.txt  todo.txt
cmake/: SuperBuild.cmake
src/: CMakeLists.txt
src/houdini/: CMakeLists.txt
src/houdini/lops/: CMakeLists.txt  lop_deformer.cpp
src/houdini/python/piston_houdini/: shelf_tools.py
src/houdini/python_libs/: CMakeLists.txt  piston.cpp  piston.py.in  pythonrc.py
src/houdini/toolbar/: piston.shelf
src/piston_lib/: CMakeLists.txt  adjacency.cpp  adjacency.h  base_curves_deformer.cpp  base_curves_deformer.h  base_hair_deformer.cpp  base_hair_deformer.h  base_mesh_curves_deformer.cpp  base_mesh_curves_deformer.h  common.cpp  common.h  curves_container.cpp  curves_container.h  curves_deformer_factory.cpp  curves_deformer_factory.h  debug_drawing.cpp  debug_drawing.h  deformer_data_cache.cpp  deformer_data_cache.h  deformer_factory.cpp  deformer_factory.h  deformer_stats.cpp  deformer_stats.h  fast_curves_deformer.cpp  fast_curves_deformer.h  fast_curves_deformer_data.cpp  fast_curves_deformer_data.h  fast_hair_deformer.cpp  fast_hair_deformer.h  float16.h  float24.h  framework.h  geometry_tools.cpp  geometry_tools.h  guide_curves_container.cpp  guide_curves_container.h  guide_curves_deformer.cpp  guide_curves_deformer.h  guide_curves_deformer_data.cpp  guide_curves_deformer_data.h  (+37 more)
src/piston_lib/include/CGAL/license/: Triangulation_3.h
test_scemes/: wrap_deformer_test_with_hole_01.hip
test_scemes/backup/: wrap_deformer_test_with_hole_01_bak1.hip
test_scenes/: chained_deformers_test_01.hip  fast_deformer_data_test_01.hip  fast_deformer_data_test_02.hip  wrap_deformer_data_test_01.hip  wrap_deformer_dist_mode_test_with_hole_02.hip  wrap_deformer_space_mode_test_with_hole_01.hip  wrap_deformer_test_01.hip
test_scenes/backup/: fast_deformer_data_test_01_bak2.hip  fast_deformer_data_test_01_bak3.hip  fast_deformer_data_test_02_bak1.hip  fast_deformer_data_test_02_bak2.hip  fast_deformer_data_test_02_bak3.hip  fast_deformer_data_test_02_bak4.hip  fast_deformer_data_test_02_bak5.hip
test_scenes/geo/: fast_deformer_data_test_01.usd_rop1.usd
tools/: boost_python_docstrings.py
